Added 'Calculator' Activity and 'Settings' Activity
Intents set up.
Action bar updated.
Need to implement the ability to swap between the two.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Settings"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.benlewis.fitness531app.MainActivity" />
+        </activity>
+        <activity
+            android:name=".Calculator"
+            android:label="@string/title_activity_calculator"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.benlewis.fitness531app.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
